--- a/project-tier-clark.html
+++ b/project-tier-clark.html
@@ -35,7 +35,7 @@
       // Author information
       presenters: [
             {
-        name:  'Ben Baumer (borrowed from Mine Çetinkaya-Rundel)' ,
+        name:  'Ben Baumer (forked from Mine Çetinkaya-Rundel)' ,
         company: '',
         gplus: '',
         twitter: '',
@@ -151,7 +151,10 @@
 
 </article></slide><slide class=''><hgroup><h2>What is version control?</h2></hgroup><article  id="what-is-version-control">
 
-<p>Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later.</p>
+<ul>
+<li>a system that records changes to files over time</li>
+<li>recall specific versions later</li>
+</ul>
 
 </article></slide><slide class=''><hgroup><h2>Bad</h2></hgroup><article  id="bad">
 
@@ -180,7 +183,10 @@
 
 </article></slide><slide class=''><hgroup><h2>Better - Saving everything together at once</h2></hgroup><article  id="better---saving-everything-together-at-once">
 
-<p>Everytime you make a save, you zip the entire directory that your project files are in and save it with a date.</p>
+<p>Everytime you save:</p>
+
+<pre >- zip the entire directory 
+- save it with a date</pre>
 
 </article></slide><slide class=''><hgroup><h2>Best - Version Control</h2></hgroup><article  id="best---version-control">
 
