--- a/project-tier-clark.html
+++ b/project-tier-clark.html
@@ -410,7 +410,7 @@
 
 <div class="columns-2">
 <ul>
-<li>a single environment to combine your documentation and your analysis</li>
+<li>an <a href='https://en.wikipedia.org/wiki/Integrated_development_environment' title=''>IDE</a> for statistical computing</li>
 <li>Runs on top of R</li>
 <li>R Markdown integration</li>
 <li>GitHub integration</li>
@@ -530,7 +530,7 @@ summary(m_hw1_mw1)</pre>
 
 <p>LaTeX:</p>
 
-<p>\(\hat{y} = \beta_0 + \beta_1 \times x\)</p>
+<p>\(\hat{y} = \beta_0 + \beta_1 \cdot x\)</p>
 
 </article></slide><slide class=''><hgroup><h2>Resources</h2></hgroup><article  id="resources">
 
