--- a/project-tier-clark.html
+++ b/project-tier-clark.html
@@ -88,7 +88,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">April 22, 2016 <br> <a href="http://bit.ly/tier_clark" class="uri">http://bit.ly/tier_clark</a></p>
+            <p style="margin-top: 6px; margin-left: -2px;">April 22, 2016 <br> (<a href="http://www.science.smith.edu/~bbaumer/project_tier/project-tier-clark.html" class="uri">http://www.science.smith.edu/~bbaumer/project_tier/project-tier-clark.html</a>)</p>
           </hgroup>
   </slide>
 
@@ -538,17 +538,17 @@ summary(m_hw1_mw1)</pre>
 <li>This talk:
 
 <ul>
-<li>Repo: <a href='https://github.com/beanumber/project-tier-clark' title=''>https://github.com/beanumber/project-tier-clark</a></li>
-<li>Slides in your browser: <a href='http://bit.ly/tier_duke' title=''>http://bit.ly/tier_duke</a></li>
+<li>Repo: (<a href='https://github.com/beanumber/project-tier-clark' title=''>https://github.com/beanumber/project-tier-clark</a>)</li>
+<li>Slides in your browser: (<a href='http://www.science.smith.edu/~bbaumer/project_tier/project-tier-clark.html' title=''>http://www.science.smith.edu/~bbaumer/project_tier/project-tier-clark.html</a>)</li>
 </ul></li>
 <li><p>Project TIER on GitHub: <a href='https://github.com/ProjectTIER' title=''>https://github.com/ProjectTIER</a></p></li>
 <li>Learn more:
 
 <ul>
-<li>R Markdown: <a href='http://rmarkdown.rstudio.com/' title=''>http://rmarkdown.rstudio.com/</a></li>
-<li>RStudio and git: <a href='https://support.rstudio.com/hc/en-us/articles/200532077-Version-Control-with-Git-and-SVN' title=''>https://support.rstudio.com/hc/en-us/articles/200532077-Version-Control-with-Git-and-SVN</a></li>
-<li>Try Git: <a href='https://try.github.io' title=''>https://try.github.io</a></li>
-<li>Reproducible Science Curriculum (2 day workshop): <a href='https://github.com/Reproducible-Science-Curriculum/' title=''>https://github.com/Reproducible-Science-Curriculum/</a></li>
+<li>R Markdown: (<a href='http://rmarkdown.rstudio.com/' title=''>http://rmarkdown.rstudio.com/</a>)</li>
+<li>RStudio and git: (<a href='https://support.rstudio.com/hc/en-us/articles/200532077-Version-Control-with-Git-and-SVN' title=''>https://support.rstudio.com/hc/en-us/articles/200532077-Version-Control-with-Git-and-SVN</a>)</li>
+<li>Try Git: (<a href='https://try.github.io' title=''>https://try.github.io</a>)</li>
+<li>Reproducible Science Curriculum (2 day workshop): (<a href='https://github.com/Reproducible-Science-Curriculum/' title=''>https://github.com/Reproducible-Science-Curriculum/</a>)</li>
 </ul></li>
 </ul></article></slide>
 
